[project]
name = "rag-assistant"
version = "0.1.0"
description = "RAG Document Assistant"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",

    # LangChain ecosystem
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",

    # Vector store
    "pinecone",

    # Embeddings
    "langchain-google-genai",

    # PDF parsing
    "pypdf",

    # Utils
    "python-dotenv",
    "pydantic",
    "requests",
    "tqdm",
    "loguru",
    "gradio"
]
